projects/compiler/test/typechecker/bindingdecl/error_illegal_value_type_type.abra
type Foo {}

val f = Foo